<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimaryDark"
    tools:context="com.alekseyrobul.one_meme.classes.MainContainerActivity">

    <FrameLayout
        android:id="@+id/optionsFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="30mm"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:tag="optionsTag">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="false"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/onememeunit"></com.google.android.gms.ads.AdView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="100dp"
                android:layout_marginTop="@dimen/optionBtn_margin"
                android:background="@drawable/one_meme_button"
                android:text="@string/clear"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="@dimen/optionBtn_margin"
                android:background="@drawable/one_meme_button"
                android:text="@string/share"
                android:textColor="@color/white"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/settingsBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@drawable/one_meme_button"
                android:text="@string/settings"
                android:textColor="@color/white" />
        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_above="@+id/optionsFrameLayout"
        android:id="@+id/memeFrameLayout"
        android:minHeight="@dimen/memeMaxSize"
        android:minWidth="@dimen/memeMaxSize"
        android:layout_alignParentBottom="false"
        android:layout_height="330dp"
        android:layout_gravity="top"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:id="@+id/memeFrame"
            android:minHeight="@dimen/memeMaxSize"
            android:minWidth="@dimen/memeMaxSize"
            android:layout_width="300dp"
            tools:ignore="UselessParent"
            android:layout_height="300dp">

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.alekseyrobul.one_meme.classes.MemeFragment"
                android:id="@+id/memeFragment"
                tools:layout="@layout/meme_fragment" />
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/main_ovrl_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clear"
        android:enabled="false"
        android:visibility="invisible"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsFrame"
        android:clipChildren="false"
        android:layout_below="@+id/optionsFrameLayout"
        android:layout_marginTop="1dp">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.alekseyrobul.one_meme.classes.SettingsFragment"
            android:id="@+id/settingsFragment"
            tools:layout="@layout/settings_fragment"/>
    </FrameLayout>

</RelativeLayout>
